# ebola

./: LICENSE  README.md  data_dictionary.yml  latest.csv
.github/workflows/: data-transfer-s3-to-github.yml  ingestion_deploy.yml  ingestion_tests.yml
s3_ui/: Dockerfile  Dockerfile-test  README.md  pyproject.toml  requirements.txt  run.py  test_data.py
s3_ui/templates/: folder.html  index.html
scripts/: README.md
scripts/ingestion/: docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  setup.py  test_run.py
