[tool.poetry]
name = "gh_ebola_ingestion"
version = "0.1.0"
description = "Transfers line list data from Google Sheets to storage"
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.25.1"
pymongo = "^4.3.2"
pygsheets = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
